--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,7 @@
   color: #c18f59; }
 
 .brand-button {
+  background-color: #343434;
   display: inline-block;
   padding: 10px 20px;
   font-size: 11px;
@@ -718,14 +719,15 @@
       flex-direction: column; } }
 
 .social-icons a {
+  background-color: #343434 ;
   position: relative;
-  border: 1px solid white;
+  border: 1px solid #343434;
   border-radius: 50%;
   padding: 13px 23px;
   margin-right: 10px;
   transition: 0.3s ease; }
   .social-icons a:hover {
-    background-color: #777;
+    background-color: #c18f59;
     border-color: transparent; }
 
 .social-icons img {
